# royale-ros

./: CMakeLists.txt  ChangeLog.md  README.md  TODO.md  nodelets.xml  package.xml  royale_env.sh.in
doc/: building.md  changing_exposures.md  dump_and_config.md  lscam.md  multiple_cameras.md  royale_install.md
include/royale_ros/: camera_nodelet.h
launch/: camera.launch  camera_manager.launch  camera_nodelet.launch  config.launch  royale_ros.rviz  rviz.launch
msg/: ExposureTimes.msg  SetExposureTime.msg  SetExposureTimes.msg
src/: camera_manager.cpp  camera_nodelet.cpp  config.cpp  dump.cpp  lscam.cpp
srv/: GetUseCases.srv  Ls.srv  Open.srv
utils/: debianize-royale.py
